name:                sinceuntil
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ollimandoliini/sinceuntil/
license:             BSD3
license-file:        LICENSE
author:              Olli Kortelahti
maintainer:          example@example.com
copyright:           2020 Olli Kortelahti
category:            Cli
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sinceuntil
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5
    , optparse-applicative
    , time == 1.9.3
    , sqlite-simple == 0.4.18.0
    , boxes == 0.1.5
    , mtl == 2.2.2
    , directory == 1.3.6.0
  other-modules:
    ArgParser
    , Database
    , PrettyPrinter
